--- a/CleverHostel/HostelWpfApp/App.xaml
+++ b/CleverHostel/HostelWpfApp/App.xaml
@@ -4,6 +4,10 @@
              xmlns:local="clr-namespace:HostelWpfApp"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
-    </Application.Resources>
+        <ResourceDictionary>
+                <ResourceDictionary.MergedDictionaries>
+                    <ResourceDictionary Source="StudentResourcesDictionary.xaml"/>
+                </ResourceDictionary.MergedDictionaries>
+            </ResourceDictionary>
+        </Application.Resources>
 </Application>
