--- a/CleverHostel/HostelWpfApp/MainWindow.xaml
+++ b/CleverHostel/HostelWpfApp/MainWindow.xaml
@@ -2,8 +2,9 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"  
         xmlns:local="clr-namespace:HostelWpfApp"
+        xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         mc:Ignorable="d"
         Title="Hostel Rating IS" Height="587" Width="525">
     <DockPanel  x:Name="MainDockPanel" LastChildFill="True">
@@ -45,18 +46,26 @@
                   x:Name="StudentSelectorGroupBox"
                   Padding="10"
                   Header="Выбор студента">
-            <ComboBox x:Name="StudentComboBox"/>
+            <ComboBox x:Name="StudentComboBox" 
+                      IsEditable="True" 
+                      ItemsSource="{Binding ElementName=studentsGridView, Path=ItemsSource}" 
+                      TextSearch.TextPath="Name"
+                      HorizontalContentAlignment="Stretch"
+                      StaysOpenOnEdit="True" 
+                      ItemTemplate="{StaticResource StudentCardTemplate}">
+            </ComboBox>
+            
         </GroupBox>
         <GroupBox x:Name="StudentGridViewGroupBox"
                   Padding="10"
                   Header="Список студентов">
             <DataGrid AutoGenerateColumns="False" x:Name="studentsGridView" CanUserResizeRows="False" ColumnWidth="Auto">
                 <DataGrid.Columns>
-                    <DataGridTextColumn Binding="{Binding Name}" Header="ФИО"/>
-                    <DataGridTextColumn Binding="{Binding Room}" Header="Комната" />
-                    <DataGridTextColumn Binding="{Binding Group.Course}" Header="Курс"/>
-                    <DataGridTextColumn Binding="{Binding Group.Faculty}" Header="Факультет"/>
-                    <DataGridTextColumn Binding="{Binding Points}" Header="Баллы"/>
+                    <DataGridTextColumn Binding="{Binding Path=Name}" Header="ФИО"/>
+                    <DataGridTextColumn Binding="{Binding Path=Room}" Header="Комната" />
+                    <DataGridTextColumn Binding="{Binding Path=Group.Faculty}" Header="Курс"/>
+                    <DataGridTextColumn Binding="{Binding Path=Group.Course}" Header="Факультет"/>
+                    <DataGridTextColumn Binding="{Binding Path=Points}" Header="Баллы"/>
                 </DataGrid.Columns>
             </DataGrid>
         </GroupBox>
